// Original file: src/proto/post.proto


export interface Saved {
  '_id'?: (string);
  'userId'?: (string);
  'postId'?: (string);
  'createdAt'?: (string);
  'updatedAt'?: (string);
}

export interface Saved__Output {
  '_id'?: (string);
  'userId'?: (string);
  'postId'?: (string);
  'createdAt'?: (string);
  'updatedAt'?: (string);
}
